manifests/prod/audiobookshelf/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service
  namespace: app-audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
